Exceptions + logging New DataNotFoundException New endpoint cancelledorders New endpoint orders Translated to english Excluded cancelled orders Fixes
OrderRepository:
Added findByHireStartDateBetween